[tool.poetry]
name = "httprunner"
version = "3.11.1"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://docs.httprunner.org"

keywords = ["HTTP", "api", "test", "requests", "locustio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22.0"
pyyaml = "^5.1.2"
jinja2 = "^3.0"
pydantic = "1.8.2"
loguru = "^0.4.1"
jmespath = "^0.9.5"
black = "^22"
pytest = "^7"
pytest-html = "^2.1.1"
sentry-sdk = "^0.14.4"
allure-pytest = "^2.8.16"
requests-toolbelt = {version = "^0.9.1", optional = true}
filetype = {version = "^1.0.7", optional = true}
locust = {version = "^1.0.3", optional = true}
flake8 = "^4.0.1"
python-semantic-release = "^7.28.1"
pre-commit = "^2.19.0"

[tool.poetry.extras]
allure = ["allure-pytest"]                  # pip install "httprunner[allure]", poetry install -E allure
upload = ["requests-toolbelt", "filetype"]  # pip install "httprunner[upload]", poetry install -E upload
locust = ["locust"]                         # pip install "httprunner[locust]", poetry install -E locust

[tool.poetry.dev-dependencies]
coverage = "^4.5.4"
uvicorn = "^0.17.6"
fastapi = "^0.49.0"

[tool.poetry.scripts]
httprunner = "httprunner.cli:main"
hrun = "httprunner.cli:main_hrun_alias"
hmake = "httprunner.cli:main_make_alias"
har2case = "httprunner.cli:main_har2case_alias"
locusts = "httprunner.ext.locust:main_locusts"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
commit_version_number = true
changelog_file = "docs/CHANGELOG.md"
upload_to_repository = true
repository = "name"
repository_url = "http://nexus.vesync.com:9081/repository/pypi-hosted/"
build_command = "poetry build"
hvcs = "gitlab"
