[tool.poetry]
name = "httprunner"
version = "3.27.0"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://docs.httprunner.org"

keywords = ["HTTP", "api", "test", "requests", "locustio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
allpairspy = "^2.5.0"
allure-pytest = "^2.8.16"
black = "^22"
deepdiff = "^6.3.1"
dotwiz = "^0.4.0"
filetype = {version = "^1.0.7", optional = true}
flake8 = "^4.0.1"
jinja2 = "^3.0"
jmespath = "^0.9.5"
locust = {version = "^1.0.3", optional = true}
loguru = "^0.4.1"
pre-commit = "^2.19.0"
pydantic = "1.8.2"
pyinstrument = { version = "^4.4.0", optional = true}
pytest = "^7"
pytest-html = "^3"
python = "^3.9"
python-semantic-release = "^7.28.1"
pyyaml = "^6.0.0"  # fix: This error originates from the build backend, and is likely not a problem with poetry but with pyyaml (5.4.1) not supporting PEP 517 builds. You can verify this by running 'pip wheel --use-pep517 "pyyaml (==5.4.1)"'.
requests = "^2.22.0"
requests-toolbelt = {version = "^0.9.1", optional = true}
sentry-sdk = "^0.14.4"
urllib3 = "1.26.15"  # reference: https://github.com/ionrock/cachecontrol/issues/292

[tool.poetry.extras]
allure = ["allure-pytest"]                  # pip install "httprunner[allure]", poetry install -E allure
locust = ["locust"]                         # pip install "httprunner[locust]", poetry install -E locust
profiler = ["pyinstrument"]                 # poetry install -E profiler
upload = ["requests-toolbelt", "filetype"]  # pip install "httprunner[upload]", poetry install -E upload

[tool.poetry.dev-dependencies]
coverage = "^4.5.4"
uvicorn = "^0.17.6"
fastapi = "^0.49.0"

[tool.poetry.scripts]
har2case = "httprunner.cli:main_har2case_alias"
hmake = "httprunner.cli:main_make_alias"
hrun = "httprunner.cli:main_hrun_alias"
httprunner = "httprunner.cli:main"
locusts = "httprunner.ext.locust:main_locusts"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
commit_version_number = true
changelog_file = "docs/CHANGELOG.md"
upload_to_repository = true
repository = "name"
repository_url = "http://10.40.9.73:8081/repository/pypi-internal/"
build_command = "poetry build"
hvcs = "gitlab"

[tool.poetry.plugins."pytest11"]
pytest_httprunner = "httprunner.pytestplugin"
