[tool.poetry]
name = "httprunner"
version = "3.41.2"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://docs.httprunner.org"

keywords = ["HTTP", "api", "test", "requests", "locustio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
allpairspy = "^2.5.1"
allure-pytest = "^2.13.2"
black = "^23.7.0"
deepdiff = "^6.3.1"
dotwiz = "^0.4.0"
filetype = "^1.2.0"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
loguru = "^0.7.0"
pydantic = "^2.5.0"
pytest = "^7.4.0"
pytest-html = "^3.2.0"
python = ">= 3.9, < 3.11"
pyyaml = "6.0.1"  # fix: This error originates from the build backend, and is likely not a problem with poetry but with pyyaml (5.4.1) not supporting PEP 517 builds. You can verify this by running 'pip wheel --use-pep517 "pyyaml (==5.4.1)"'.
requests = "2.30.0"  # reference: https://github.com/ionrock/cachecontrol/issues/292
requests-toolbelt = "^1.0.0"
sentry-sdk = "^1.29.2"
urllib3 = "1.26.15"  # reference: https://github.com/ionrock/cachecontrol/issues/292
pydantic-settings = "^2.1.0"
jsonschema = "^4.20.0"
py-mock = "^1.2.1"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
coverage = "^7.3.0"
flake8 = "^6.1.0"

[tool.poetry.group.release]
[tool.poetry.group.release.dependencies]
python-semantic-release = "^7.34.6"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
fastapi = "^0.101.1"
locust = "^2.16.1"
pre-commit = "^3.3.3"
pyinstrument = "^4.5.1"
uvicorn = "^0.23.2"
bump-pydantic = "^0.7.0"

[tool.poetry.scripts]
har2case = "httprunner.cli:main_har2case_alias"
hmake = "httprunner.cli:main_make_alias"
hrun = "httprunner.cli:main_hrun_alias"
httprunner = "httprunner.cli:main"
locusts = "httprunner.ext.locust:main_locusts"

[[tool.poetry.source]]
name = "tsinghua-mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
commit_version_number = true
changelog_file = "docs/CHANGELOG.md"
upload_to_repository = true
repository = "pypi-internal"
build_command = "poetry build"
hvcs = "gitlab"

[tool.poetry.plugins."pytest11"]
pytest_httprunner = "httprunner.pytestplugin"
